# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

## [1.0.0] - 2020-06-23
### Added
- First version

[Unreleased]: https://github.com/krisztianb/plantuml-pipe/compare/v1.0.0...HEAD
[1.0.0]: https://github.com/krisztianb/plantuml-pipe/releases/tag/v1.0.0